--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@
 
   <script>
     const karuta = [
-      { yomi: "ベンゼン", tori: "", img: "images/benzene.png" },
-      { yomi: "トルエン", tori: "", img: "images/toluene.png" },
+      { yomi: "ベンゼン", tori: "benzene", img: "images/benzene.png" },
+      { yomi: "トルエン", tori: "toluene", img: "images/toluene.png" },
     ];
 
 
