--- a/index.html
+++ b/index.html
@@ -82,6 +82,9 @@
     const karuta = [
       { yomi: "ベンゼン", tori: "benzene", img: "images/benzene.png" },
       { yomi: "トルエン", tori: "toluene", img: "images/toluene.png" },
+      { yomi: "フェノール", tori: "phenol", img: "images/phenol.png" },
+      { yomi: "安息香酸", tori: "benzoic acid", img: "images/benzoicAcid.png" },
+      { yomi: "ナフタレン", tori: "naphthalene", img: "images/naphthalene.png" },
     ];
 
 
